[gd_scene load_steps=15 format=3 uid="uid://borp3084b1n20"]

[ext_resource type="Script" path="res://Scripts/nivel.gd" id="1_wnjc2"]
[ext_resource type="PackedScene" uid="uid://y012ctmcp5j3" path="res://Scenes/Sodero.tscn" id="2_0cyyf"]
[ext_resource type="Texture2D" uid="uid://ygjwxug36b7s" path="res://Resources/Sprites/FondosNiveles/nivel 8.jpg" id="4_firhr"]
[ext_resource type="PackedScene" uid="uid://ddi8sx3rv5ach" path="res://Scenes/Bebidas/sifon.tscn" id="31_116xh"]
[ext_resource type="Texture2D" uid="uid://bakcwqehq0ef" path="res://Resources/Sprites/CajonesTarget/cajon gaseosa solo.png" id="31_sy7vg"]
[ext_resource type="PackedScene" uid="uid://crdu7vgfqg37e" path="res://Scenes/Bebidas/gaseosa.tscn" id="32_ymb0b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rdoln"]
radius = 34.1631
height = 2244.52

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6a1mt"]
size = Vector2(2663, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3im0"]
size = Vector2(334, 2018)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55ce4"]
size = Vector2(587.5, 259)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kpjo"]
size = Vector2(325.5, 2761.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcm60"]
size = Vector2(608, 102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fffnl"]
size = Vector2(206, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjy1n"]
size = Vector2(359, 105)

[node name="Nivel2" type="Node"]
script = ExtResource("1_wnjc2")

[node name="PuntoInicio" type="Marker2D" parent="."]
position = Vector2(315, 590)

[node name="PuntoDestino" type="Area2D" parent="."]
position = Vector2(11, 63)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuntoDestino"]
position = Vector2(130, 1903)
scale = Vector2(1.72701, 0.921356)
shape = SubResource("CapsuleShape2D_rdoln")

[node name="WinPoint" type="Sprite2D" parent="PuntoDestino"]
z_index = -1
position = Vector2(132, 1018)
scale = Vector2(0.03, 0.03)
texture = ExtResource("31_sy7vg")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.5, 0.5)

[node name="Jugador" parent="." instance=ExtResource("2_0cyyf")]
position = Vector2(358, 524)

[node name="ZonaMuerta" type="Area2D" parent="."]
position = Vector2(-64, 153)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaMuerta"]
position = Vector2(1402, 1294)
shape = SubResource("RectangleShape2D_6a1mt")

[node name="Background" type="Node" parent="."]

[node name="Fondo" type="Sprite2D" parent="Background"]
z_index = -3
position = Vector2(1151, 646)
scale = Vector2(1.2, 1.209)
texture = ExtResource("4_firhr")

[node name="Gaseosa" parent="." instance=ExtResource("32_ymb0b")]
position = Vector2(502, 623)

[node name="Sifon2" parent="." instance=ExtResource("31_116xh")]
position = Vector2(1847, 284)

[node name="Colisiones" type="Node" parent="."]

[node name="Pared" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared"]
position = Vector2(65, -217)
shape = SubResource("RectangleShape2D_k3im0")

[node name="Pared2" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared2"]
position = Vector2(295.25, 1287.5)
shape = SubResource("RectangleShape2D_55ce4")

[node name="Pared4" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared4"]
position = Vector2(2139.75, -83.25)
shape = SubResource("RectangleShape2D_8kpjo")

[node name="Pared5" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared5"]
position = Vector2(480, 728)
shape = SubResource("RectangleShape2D_fcm60")

[node name="Pared6" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared6"]
position = Vector2(681, 624)
shape = SubResource("RectangleShape2D_fffnl")

[node name="Pared7" type="StaticBody2D" parent="Colisiones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/Pared7"]
position = Vector2(1797.5, 410.5)
shape = SubResource("RectangleShape2D_rjy1n")

[connection signal="body_entered" from="PuntoDestino" to="." method="llegar_a_destino"]
[connection signal="body_entered" from="ZonaMuerta" to="." method="morir"]
